@@ -675,6 +675,10 @@
         * Add elm_toolbar_item_show/bring_in.
           It show or bring a specific item, when the toolbar can be scrolled.
 
-2012-10-25  Michael Bouchaud (yoz)
+2012-11-12  Michael Bouchaud (yoz)
 
         * Add missing selected event in elm_index (elm_index_item_selected_set)
+
+2012-11-14  Michael Bouchaud (yoz)
+
+        * Add elm_genlist_nth_item_get
